server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
      - name: server-account
        image: nightmayr/football-account:v3
        ports:
          - containerPort: 8081
      - name:  server-player
        image: nightmayr/football-player:v1
        ports:
          - containerPort: 8082
      - name:  server-email
        image: nightmayr/football-email:v1
        ports:
          - containerPort: 8086
      # - name:  server-consumer
      #   image: nightmayr/football-consumer
      #   ports:
      #     - containerPort: 8084
      - name:  server-mongoclient
        image: nightmayr/football-mongoclient:v1
        ports:
          - containerPort: 8085
