activemq-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: activemq-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: activemq
  ports:
    - name: console
      port: 8161
      targetPort: 8161
    - name: queue
      port: 61616
      targetPort: 61616
    - name: queue2
      port: 61613
      targetPort: 61613
