consumer-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: consumer-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: consumer
  ports:
    - port: 8084
      targetPort: 8084
